--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
    <header>
       <span>My logo</span>
-      <nav></nav>
+      <nav>
+         <li>
+            <ul><a href="#">Home</a></ul>
+            <ul><a href="#">Shop</a></ul>
+            <ul><a href="#">About us</a></ul>
+         </li>
+      </nav>
    </header>
 
    <article>
