--- a/registration.html
+++ b/registration.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-   <form action="#" method="POST"></form>
+   <form action="#" method="POST">
+      <fieldset>
+         <legend>Registrarion</legend>
+      </fieldset>
+   </form>
 </body>
 
 </html>
