--- a/registration.html
+++ b/registration.html
@@ -12,6 +12,10 @@
    <form action="#" method="POST">
       <fieldset>
          <legend>Registrarion</legend>
+         <p>
+            <label for="login">Login</label>
+            <input type="text" name="login" id="login">
+         </p>
       </fieldset>
    </form>
 </body>
