--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <section>
          <h1>title</h1>
          <p>Some information</p>
+         <h3>Subtitle</h3>
+         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, ducimus!</p>
       </section>
    </article>
 
